# cmake_fortran_example

external-library/: CMakeLists.txt  communications.f90  main.f90
more-dependency/: CMakeLists.txt  a.f90  b.f90  c.f90  d.f90  e.f90  f.f90  g.f90  h.f90  i.f90  j.f90  k.f90  l.f90  m.f90  main.f90  n.f90  o.f90  p.f90  q.f90  r.f90  s.f90  source_generator.py  t.f90  u.f90  v.f90  w.f90  x.f90  y.f90  z.f90
multilingual/: CMakeLists.txt
multilingual/include/: greetings.h
multilingual/src/: CMakeLists.txt  greetings.cxx  greetings.f90  main.f90
shared-library/: CMakeLists.txt
shared-library/include/: reynolds.h
shared-library/src/: CMakeLists.txt  cxx_test.cxx  fortran_test.f90  reynolds_c_interface.f90  reynolds_cxx_interface.cxx  reynolds_lib.f90
simple-dependency/: CMakeLists.txt  a.f90  b.f90  c.f90  d.f90  main.f90
static-library/: CMakeLists.txt  some_library.f90  tool1.f90  tool2.f90
